pmq.com (archived on 2002-06-01)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 3862,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.84,
  "homepage_snapshot_redirected_domain": "pmq.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020330170518id_/http://pmq.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020330170518id_/http%3A//pmq.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "pmq.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020601184157id_/http%3A//pmq.com/privacy.shtml",
  "policy_title": "Privacy Policy Statement",
  "policy_url": "pmq.com/privacy.shtml",
  "sha1": "aae0a23d0c564d0dcaa173e3b54889668f70ae44",
  "simhash": 16158511324200479233,
  "simhash_updated": true,
  "site_hostname": "pmq.com",
  "site_url": "http://pmq.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20020601184157",
  "word_count": 671,
  "year": 2002
}

--- a/p/pm/pmq/pmq.com.html
+++ b/p/pm/pmq/pmq.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pmq.com privacy policy that was archived on 2001-04-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010411155957id_/http%3A//www.pmq.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pmq.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601184157id_/http%3A//pmq.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy Statement</title>
@@ -39,14 +39,14 @@ A:hover {
   <tbody><tr bgcolor="#C40000">
     <td width="50%" align="left"><table border="2" bordercolorlight="silver" bordercolordark="gray"><tbody><tr><td><a href="http://www.pmq.com/index.shtml"><img alt="Pizza Marketing Quarterly, pizza, pizzeria, pizzaria, pizza marketing, online, magazine, sales building 2000, pizza shop, pizza stores, 2000, idea forum, sales, marketing, business, pizza sales, promotions, steve green, john correll, big dave ostrander, big dave, profit" border="0" height="60" src="im/logo5.gif" width="270"></a></td></tr></tbody></table></td>
 <td colspan="2" width="50%" align="right">
-<table border="2" bordercolorlight="silver" bordercolordark="gray"><tbody><tr><td><a href="http://www.pmq.com/cgi-bin/ads/ads.pl?banner=movingtargets" target="_blank"><img src="http://www.pmq.com/bannerdir/movingtargets.gif" height="60" width="270" alt="MovingTargets.com" border="0"></a></td></tr></tbody></table>
+<table border="2" bordercolorlight="silver" bordercolordark="gray"><tbody><tr><td><a href="http://www.pmq.com/cgi-bin/ads/ads.pl?banner=fidelitycomcom" target="_blank"><img src="http://www.pmq.com/bannerdir/fidelitycomani1.gif" height="60" width="270" alt="Fidelity Communications Corporation" border="0"></a></td></tr></tbody></table>
 
 
 
 
 </td></tr><tr bgcolor="#000000"><td colspan="3">
 <font size="-3"><br></font>
-<div align="center"><table border="4" bordercolorlight="silver" bordercolordark="gray"><tbody><tr><td width="270" height="60" valign="middle"><a href="http://www.pmq.com/cgi-bin/ads/ads.pl?banner=pmq3" target="_blank"><img src="http://www.pmq.com/bannerdir/banner_guide.gif" height="60" width="270" alt="Pizza Industry Guide" border="0"></a></td><td width="270" height="60" valign="middle"><a href="http://www.pmq.com/cgi-bin/ads/ads.pl?banner=radiant2" target="_blank"><img src="http://www.pmq.com/bannerdir/bannerTotoPMQ.gif" height="60" width="270" alt="" border="0"></a></td></tr></tbody></table>
+<div align="center"><table border="4" bordercolorlight="silver" bordercolordark="gray"><tbody><tr><td width="270" height="60" valign="middle"><a href="http://www.pmq.com/cgi-bin/ads/ads.pl?banner=middleby" target="_blank"><img src="http://www.pmq.com/bannerdir/middleby.gif" height="60" width="270" alt="Middleby.com" border="0"></a></td><td width="270" height="60" valign="middle"><a href="http://www.pmq.com/cgi-bin/ads/ads.pl?banner=pizzaonline" target="_blank"><img src="http://www.pmq.com/bannerdir/pizzaonline.gif" height="60" width="270" alt="PizzaOnline" border="0"></a></td></tr></tbody></table>
 </div><font size="-3"><br></font>
 </td></tr>  
 
@@ -86,33 +86,31 @@ number for more narrow margins --->
 <!-- EDIT HERE -->
 
 
-
-<font size="2" face="Arial, Helvetica">
-
-<h1 align="center">Privacy Policy Statement</h1>This is the web site of <b>Green Advertising</b>.<br>
-<p>Our postal address is <br>
+<b><font face="Arial" size="6"><p align="CENTER">Privacy Policy Statement</p>
+</font></b><font face="Arial" size="2"><p>This is the web site of <b>Pizza Marketing Quarterly</b></p><b>
+</b><p>Our postal address is <br>
 <b>605 Edison Street<br>
-Oxford, MS 38655</b></p>
-We can be reached via e-mail at <a href="mailto:mail@pmq.com">mail@pmq.com</a><br>
-or you can reach us by telephone at (662) 234-5481<br>
+Oxford, MS 38655</b></p><b>
+</b></font><p><font face="Arial" size="2">We can be reached via e-mail at </font><a href="mailto:mail@pmq.com"><font face="Arial" size="2">mail@pmq.com</font></a><font face="Arial" size="2"><br>
+or you can reach us by telephone at (662) 234-5481</font></p><font face="Arial" size="2">
 <p>For each visitor to our Web page, our Web server automatically recognizes only the consumer's domain name, but not the e-mail address (where possible).</p>
 <p>We collect the domain name and e-mail address (where possible) of visitors to our Web page, the e-mail addresses of those who post messages to our bulletin board, the e-mail addresses of those who communicate with us via e-mail, the e-mail addresses of those who make postings to our chat areas, aggregate information on what pages consumers access or visit, user-specific information on what pages consumers access or visit, information volunteered by the consumer, such as survey information and/or site registrations.</p>
-<p>The information we collect is used to improve the content of our Web page, used to notify consumers about updates to our Web site, used by us to contact consumers for marketing purposes.</p>
-<p>With respect to cookies: We do not set any cookies. </p><p>If you do not want to receive e-mail from us in the future, please let us know by sending us e-mail at the above address, calling us at the above telephone number, writing to us at the above address.</p>
-<p>From time to time, we make the e-mail addresses of those who access our site available to other reputable organizations whose products or services we think you might find interesting. If you do not want us to share your e-mail address with other companies or organizations, please let us know by calling us at the number provided above, e-mailing us at the above address, writing to us at the above address.</p>
-<p>From time to time, we make our <i>customer</i> e-mail list available to other reputable organizations whose products or services we think you might find interesting. If you do not want us to share your e-mail address with other companies or organizations, please let us know by calling us at the number provided above, e-mailing us at the above address, writing to us at the above address.</p>
-<p>If you supply us with your postal address on-line you may receive periodic mailings from us with information on new products and services or upcoming events.   If you do not wish to receive such mailings, please let us know by calling us at the number provided above, e-mailing us at the above address, writing to us at the above address.</p>
-you may receive mailings from other reputable companies. You can, however, have your name put on our do-not-share list by calling us at the number provided above, e-mailing us at the above address, writing to us at the above address.<p></p>
-<p>Please provide us with your exact name and address. We will be sure your name is removed from the list we share with other organizations  </p><p></p><p>Persons who supply us with their telephone numbers on-line may receive telephone contact from us with information regarding new products and services or upcoming events. If you do not wish to receive such telephone calls, please let us know by sending us e-mail at the above address, calling us at the above telephone number, writing to us at the above address.</p>
-<p></p><p>Persons who supply us with their telephone numbers on-line may receive telephone contact from other reputable companies. You can, however, have your name put on our do-not-share list by , sending us e-mail at the above address, calling us at the above telephone number, writing to us at the above address.</p>
-Please provide us with your name and phone number. We will be sure your name is removed from the list we share with other organizations  <p>With respect to Ad Servers: We do not partner with or have special relationships with any ad server companies.  </p><p>From time to time, we may use customer information for new, unanticipated uses not previously disclosed in our privacy notice.  If our information practices change at some time in the future we will post the policy changes to our Web site to notify you of these changes and provide you with the ability to opt out of these new uses.  If you are concerned about how your information is used, you should check back at our Web site periodically.</p>
-Customers may prevent their information from being used for purposes other than those for which it was originally collected by calling us at the number provided above, e-mailing us at the above address, writing us at the above address.<p></p>
+<p>The information we collect is used to improve the content of our Web page, used to notify consumers about updates to our Web site, used by us to contact consumers for communication and marketing purposes. However, PMQ is the party that will initiate an email. We do not share our email lists with any third party.</p>
+<p>With respect to cookies: We do set cookies in the discussion forum. </p>
+<p>If you do not want to receive e-mail from us in the future, please let us know by sending us e-mail at the above address, calling us at the above telephone number, writing to us at the above address.</p>
+<p>Persons who supply us with their telephone numbers on-line may receive telephone contact from us with information regarding new products and services or upcoming events. If you do not wish to receive such telephone calls, please let us know by sending us e-mail at the above address, calling us at the above telephone number, writing to us at the above address.</p>
+<p>Persons who supply us with their telephone numbers on-line may receive telephone contact from other reputable companies. You can, however, have your name put on our do-not-share list by , sending us e-mail at the above address, calling us at the above telephone number, writing to us at the above address.</p>
+<p>Please provide us with your name and phone number. We will be sure your name is removed from the list we share with other organizations </p>
+<p>With respect to Ad Servers: We do not partner with or have special relationships with any ad server companies. </p>
+<p>From time to time, we may use customer information for new, unanticipated uses not previously disclosed in our privacy notice. If our information practices change at some time in the future we will post the policy changes to our Web site to notify you of these changes and provide you with the ability to opt out of these new uses. If you are concerned about how your information is used, you should check back at our Web site periodically.</p>
+<p>Customers may prevent their information from being used for purposes other than those for which it was originally collected by calling us at the number provided above, e-mailing us at the above address, writing us at the above address. </p>
 <p>Upon request we provide site visitors with access to no information that we have collected and that we maintain about them.</p>
 <p>Upon request we offer visitors the ability to have inaccuracies corrected in contact information, financial information.</p>
-Consumers can have this information corrected by sending us e-mail at the above address, calling us at the above telephone number, writing to us at the above address.<p></p>
+<p>Consumers can have this information corrected by sending us e-mail at the above address, calling us at the above telephone number, writing to us at the above address. </p>
 <p>With respect to security: We have appropriate security measures in place in our physical facilities to protect against the loss, misuse or alteration of information that we have collected from you at our site.</p>
 <p>If you feel that this site is not following its stated information policy, you may contact us at the above addresses or phone number.</p>
-</font> 
+</font>
+
 
 
 <p>
@@ -170,9 +168,9 @@ document.write(date + ", " + year + "</div>");
 <tbody><tr><td width="100%" bgcolor="#ffffff" valign="top">
 <font face="Arial" color="black" size="2">
 <li><a href="index.shtml">Home</a><br>
-</li><li><a href="new.shtml">From the Editor</a><br>
+</li><li><a href="http://www.pmq.com/mag/2002spring/publisher.shtml">From the Publisher</a><br>
 </li><li><a href="cgi-bin/bbs/index.cgi">Think Tank</a><br>
-</li><li><a href="idea_forum.shtml">Idea Forum</a><br>
+</li><li><a href="http://www.pmq.com/idea_forum.shtml">Idea Forum</a><br>
 </li><li><a href="http://pmq.com/pos_information_center.shtml">POS Information Center</a><br>
 </li><li><a href="subscribe.shtml">Subscribe</a><br>
 </li><li><a href="links.shtml">PMQ Links</a><br>
@@ -199,14 +197,28 @@ document.write(date + ", " + year + "</div>");
 <table border="0" bgcolor="#ffffff" cellspacing="0" cellpadding="6">
 <tbody><tr><td width="100%" bgcolor="#ffffff" valign="top">
 <font face="Arial" color="black" size="2">
-<li><a href="fall_2000.shtml">Fall 2000</a><br>
-</li><li><a href="summer_2000.shtml">Summer 2000</a><br>
-</li><li><a href="spring_2000.shtml">Spring 2000</a><br>
-</li><li><a href="winter_2000.shtml">Winter 2000</a><br>
-</li><li><a href="fall_1999.shtml">Fall 1999</a><br>
-</li><li><a href="summer_1999.shtml">Summer 1999</a><br>
-</li><li><a href="spring_1999.shtml">Spring 1999</a><br>
-</li></font><li><font face="Arial" color="black" size="2"><a href="fall_1997.shtml">Fall 1997</a><br>
+<li><a href="http://www.pmq.com/mag/2002winter/index.shtml">Winter 2002</a><br>
+
+</li><li><a href="http://www.pmq.com/mag/2001fall/index.shtml">Fall 2001</a><br>
+</li><li><a href="http://www.pmq.com/mag/2001summer/index.shtml">Summer 2001</a><br>
+</li><li><a href="http://www.pmq.com/spring_2001_contents.shtml">Spring 2001</a><br>
+</li><li><a href="http://www.pmq.com/winter_2001.shtml">Winter 2001</a><br>
+
+</li><li><a href="http://www.pmq.com/fall_2000.shtml">Fall 2000</a><br>
+</li><li><a href="http://www.pmq.com/summer_2000.shtml">Summer 2000</a><br>
+</li><li><a href="http://www.pmq.com/spring_2000.shtml">Spring 2000</a><br>
+</li><li><a href="http://www.pmq.com/winter_2000.shtml">Winter 2000</a><br>
+
+</li><li><a href="http://www.pmq.com/fall_1999.shtml">Fall 1999</a><br>
+</li><li><a href="http://www.pmq.com/summer_1999.shtml">Summer 1999</a><br>
+</li><li><a href="http://www.pmq.com/spring_1999.shtml">Spring 1999</a><br>
+</li><li><a href="http://www.pmq.com/winter_1999_contents.shtml">Winter 1999</a><br>
+
+
+</li><li><a href="http://www.pmq.com/fall_1998_contents.shtml">Fall 1998</a><br>
+</li><li><a href="http://www.pmq.com/spring_1998_contents.shtml">Spring 1998</a><br>
+</li><li><a href="http://www.pmq.com/winter_97-98_contents.shtml">Winter 97-98</a><br>
+</li></font><li><font face="Arial" color="black" size="2"><a href="http://www.pmq.com/fall_1997.shtml">Fall 1997</a><br>
 </font> 
 </li></td></tr></tbody></table>
 </div></td></tr></tbody></table>
@@ -217,8 +229,8 @@ document.write(date + ", " + year + "</div>");
 <div align="center"><table border="0" width="100%" cellspacing="0" cellpadding="0">
 <tbody><tr><td width="100%" bgcolor="#000000">
 
-<div align="center"><font size="-1" color="white" face="arial,helvetica">Content © Copyright 2000-2001 <a href="mailto:steve@pmq.com"><font color="red"><b>Green Advertising</b></font></a>, All rights reserved. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="privacy.shtml"><font color="red"><b>Privacy Policy</b></font></a></font><br>
-<font size="-1" color="white" face="arial,helvetica">Design © Copyright 2000-2001, <a href="http://www.bizhub.com"><font color="red"><b>Baron Consulting Group, Ltd.</b></font></a>, All rights reserved. </font></div> 
+<div align="center"><font size="-1" color="white" face="arial,helvetica">Content © Copyright 2000-2002 <a href="mailto:steve@pmq.com"><font color="red"><b>Green Advertising</b></font></a>, All rights reserved. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="privacy.shtml"><font color="red"><b>Privacy Policy</b></font></a></font><br>
+<font size="-1" color="white" face="arial,helvetica">Design © Copyright 2000-2002, <a href="http://www.bizhub.com"><font color="red"><b>Baron Consulting Group, Ltd.</b></font></a>, All rights reserved. </font></div> 
 
 </td></tr></tbody></table></div>
 </td></tr></tbody></table><br><br><br><br></div>
