--- a/a/al/all/allmovie.com.html
+++ b/a/al/all/allmovie.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the allmovie.com privacy policy that was archived on 2001-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011212000302id_/http%3A//allmovie.com/com/amg/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the allmovie.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601184532id_/http%3A//www.allmovie.com/com/amg/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>All Media Guide Privacy Policy</title>
@@ -44,13 +44,6 @@ Although All Media Guide uses all reasonable efforts to safeguard the confidenti
 <p><u><b>Outside Links</b></u>
 <br>
 The All Media Guide sites contain links to other sites.  All Media Guide is not responsible for the privacy practices or the content of such Web sites.</p>
-
-<p><u><b>Advertising &amp; Cookies</b></u>
-<br>
-All Media Guide uses an outside ad company to display ads on our site. While we do not use cookies on our sites, ads from advertisers may contain cookies. Cookies received with banner ads are collected by our ad company, and we do not have access to this information. Users will be able to use all features of the All Media Guide network whether or not they have disabled cookies on their system.</p>
-<p>
-The privacy policy of 24/7 Media, All Media Guide's advertising representation firm, can be viewed <a href="http://www.247media.com/privacy.html">here</a>.
-</p>
 
 <p><u><b>Consent</b></u>
 <br>
