--- a/u/up/ups/ups.com.html
+++ b/u/up/ups/ups.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ups.com privacy policy that was archived on 2001-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011216203353id_/http%3A//www.ups.com/about/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ups.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601184618id_/http%3A//www.ups.com/about/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>UPS Privacy Policy</title>
@@ -16,7 +16,7 @@
   </tr>
   <tr align="left" valign="top">
     <td><a href="/"><img src="/images/nav/global/ua_gnav_regions_us_a.gif" alt="United States" width="179" height="11" border="0"></a><br><a href="/"><img src="/images/nav/global/ua_gnav_upslogo_a.gif" alt="UPS Logo" width="81" height="60" border="0"></a><a href="http://www.racing.ups.com"><img src="/images/nav/global/nascarlogo.gif" alt="UPS Racing" width="98" height="60" border="0"></a><br><a href="https://www.ups.com/servlet/login?returnto="><img src="/images/nav/global/nav0_mylogin_off.gif" alt="LOG IN > TO MY UPS.COM" width="179" height="22" border="0"></a><br><img src="/images/nav/global/nav0_greenshadow.gif" alt="" width="179" height="3" border="0"></td>
-    <td><img src="/images/pixel.gif" alt="" width="1" height="1" vspace="3"><br><a href="/using/svc-index.html"><img src="/images/nav/global/nav1_serviceguide_off.gif" alt="Service Guide" width="91" height="21" border="0"></a><a href="/using/sw-index.html"><img src="/images/nav/global/nav1_e-business1_off.gif" alt="E-Business" width="76" height="21" border="0"></a><a href="/using/custserv/index.html"><img src="/images/nav/global/nav1_custserv_off.gif" alt="Customer Service" width="113" height="21" border="0"></a><a href="/about/about.html"><img src="/images/nav/global/nav1_about_on.gif" alt="About UPS" width="72" height="21" border="0"></a><a href="/contents/contents.html"><img src="/images/nav/global/nav1_siteguide_off.gif" alt="Site Guide" width="68" height="21" border="0"></a><br><a href="/tracking/tracking.html"><img src="/images/nav/global/nav2_tracking_off_a.gif" alt="Track" width="62" height="54" border="0"></a><a href="https://www.ups.com/ups.app/iss.class"><img src="/images/nav/global/nav2_ship_off_a.gif" alt="Ship" width="53" height="54" border="0"></a><a href="http://wwwapps.ups.com/servlet/QCCServlet?iso_language=en&amp;iso_country=US"><img src="/images/nav/global/nav2_rates1a-1_off.gif" alt="Rates" width="60" height="54" border="0"></a><a href="http://wwwapps.ups.com/servlet/WWDTServlet?IATA=us&amp;Lang=eng"><img src="/images/nav/global/nav2_transit_off_a.gif" alt="Transit Time" width="72" height="54" border="0"></a><a href="http://wwwapps.ups.com/apps/pickup/request?Locale=en_US"><img src="/images/nav/global/nav2_pickup_off_a.gif" alt="Pickup" width="59" height="54" border="0"></a><a href="/using/services/locate/locate.html"><img src="/images/nav/global/nav2_dropoff_off_a.gif" alt="Drop-off" width="55" height="54" border="0"></a><a href="http://www.ups.com/using/services/supplies/bridge.html"><img src="/images/nav/global/nav2_supplies_off_a.gif" alt="Supplies" width="59" height="54" border="0"></a><br><img src="/images/nav/global/nav3_none_fill_a.gif" alt="" width="420" height="14"></td>
+    <td><img src="/images/pixel.gif" alt="" width="1" height="1" vspace="3"><br><a href="/using/svc-index.html"><img src="/images/nav/global/nav1_serviceguide_off.gif" alt="Service Guide" width="91" height="21" border="0"></a><a href="/using/sw-index.html"><img src="/images/nav/global/nav1_e-business1_off.gif" alt="E-Business" width="76" height="21" border="0"></a><a href="/using/custserv/index.html"><img src="/images/nav/global/nav1_custserv_off.gif" alt="Customer Service" width="113" height="21" border="0"></a><a href="/about/about.html"><img src="/images/nav/global/nav1_about_on.gif" alt="About UPS" width="72" height="21" border="0"></a><a href="/contents/contents.html"><img src="/images/nav/global/nav1_siteguide_off.gif" alt="Site Guide" width="68" height="21" border="0"></a><br><a href="/tracking/tracking.html"><img src="/images/nav/global/nav2_tracking_off_a.gif" alt="Track" width="62" height="54" border="0"></a><a href="https://www.ups.com/ups.app/iss.class"><img src="/images/nav/global/nav2_ship_off_a.gif" alt="Ship" width="53" height="54" border="0"></a><a href="http://wwwapps.ups.com/servlet/QCCServlet?iso_language=en&amp;iso_country=US"><img src="/images/nav/global/nav2_rates1a-1_off.gif" alt="Rates" width="60" height="54" border="0"></a><a href="http://wwwapps.ups.com/servlet/WWDTServlet?IATA=us&amp;Lang=eng"><img src="/images/nav/global/nav2_transit_off_a.gif" alt="Transit Time" width="72" height="54" border="0"></a><a href="http://wwwapps.ups.com/apps/pickup/request?iso_country=US&amp;iso_language=en"><img src="/images/nav/global/nav2_pickup_off_a.gif" alt="Pickup" width="59" height="54" border="0"></a><a href="/using/services/locate/locate.html"><img src="/images/nav/global/nav2_dropoff_off_a.gif" alt="Drop-off" width="55" height="54" border="0"></a><a href="http://www.ups.com/using/services/supplies/bridge.html"><img src="/images/nav/global/nav2_supplies_off_b.gif" alt="Supplies" width="59" height="54" border="0"></a><br><img src="/images/nav/global/nav3_none_fill_a.gif" alt="" width="420" height="14"></td>
   </tr>
 </tbody></table>
 <!-- ========  End Global-Nav Include  ======== -->
@@ -34,10 +34,7 @@
   	<td colspan="2"><img src="/images/nav/parallel/nav4_about_upsfacts.gif" alt="UPS Facts" width="179" height="19" border="0"><br>
       <img src="/images/pixel.gif" alt="" width="1" height="1" vspace="1"></td>
 	</tr>
-	<tr align="left" valign="top">
-	  <td><font size="-1"><img src="/images/nav/parallel/nav4_ua_spacerbox.gif" alt="" width="15" height="9"> </font></td>
-	  <td><font size="-1"><a href="/about/y2k.html">Year 2000 Readiness Disclosure</a></font></td>
-	</tr>
+	
 	<tr align="left" valign="top">
 	  <td><font size="-1"><img src="/images/nav/parallel/nav4_ua_spacerbox.gif" alt="" width="15" height="9"> </font></td>
 	  <td><font size="-1"><a href="/about/privacy.html">UPS Privacy Policy</a></font></td>
@@ -268,7 +265,7 @@
         <a href="https://www.ups.com/ups.app/iss.class">Ship</a> |
         <a href="http://wwwapps.ups.com/servlet/QCCServlet?iso_language=en&amp;iso_country=US">Rates</a> |
         <a href="http://wwwapps.ups.com/servlet/WWDTServlet?IATA=us&amp;Lang=eng">Transit Time</a> |
-        <a href="http://wwwapps.ups.com/apps/pickup/request?Locale=en_US">Pickup</a> |
+        <a href="http://wwwapps.ups.com/apps/pickup/request?iso_country=US&amp;iso_language=en">Pickup</a> |
         <a href="/using/services/locate/locate.html">Drop-off</a> |
         <a href="http://www.ups.com/using/services/supplies/bridge.html">Supplies</a> |
         <a href="/using/svc-index.html">Service Guide</a> |
@@ -284,7 +281,7 @@
     <td colspan="2">&nbsp;</td>
     <td colspan="2"><img src="/images/nav/global/rule_footer.gif" alt="" width="400" height="14"><br>
       <font size="-1">
-        Copyright © 1994-2001 United Parcel Service of America, Inc.<br>
+        Copyright © 1994-2002 United Parcel Service of America, Inc.<br>
         All Rights Reserved. NASCAR<sup>®</sup> is a registered trademark of the National Association for Stock Car Auto Racing, Inc.<br><a href="/trademark/trademark.html">Trademark and Tariff Information</a>
       </font>
     </td>
@@ -296,6 +293,12 @@
     <td width="368"><img src="/images/pixel.gif" alt="" width="2" height="1" hspace="183"></td>
   </tr>
 </tbody></table>
+
+
+
+
+
+
 <!-- ========  End Global Footer Include  ======== --></p>
 
 
