--- a/l/lo/loc/localendar.com.html
+++ b/l/lo/loc/localendar.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the localendar.com privacy policy that was archived on 2001-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011220223101id_/http%3A//www.localendar.com/calendar/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the localendar.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602063137id_/http%3A//www.localendar.com/calendar/privacy) for the most accurate reproduction.-->
 
 <html><head>
 <title>localendar.com - Free web calendar hosting and calendar searching</title>
@@ -19,6 +19,7 @@ A.today {font-family : Arial, Helvetica, sans-serif; text-decoration : none; col
 A.weekday {font-family : Arial, Helvetica, sans-serif; text-decoration : none; color : White;}
 A.white {font-family : Arial, Helvetica, sans-serif; text-decoration : none; color : White;}
 A.black {font-family : Arial, Helvetica, sans-serif; text-decoration : none; color : Black;}
+A.navigator {font-family : Arial, Helvetica, sans-serif; color : Black;}
 A.mj {font-family : Arial, Helvetica, sans-serif;text-decoration : none; color : #FFFFFF;}
 A.mj_search {font-family : Arial, Helvetica, sans-serif;text-decoration : none; color : White;}
 A.mj_black {font-family : Arial, Helvetica, sans-serif;text-decoration : none; color : #000000;}
@@ -29,6 +30,8 @@ A.dj_today 		{font-family : Arial, Helvetica, sans-serif; color : #;}
 A.dj_weekday 	{font-family : Arial, Helvetica, sans-serif; color : #;}
 A.dj_weekend 	{font-family : Arial, Helvetica, sans-serif; color : #;}
 A.dj_diffmonth 	{font-family : Arial, Helvetica, sans-serif; color : #;}
+TD.header {font-family : Arial, Helvetica, sans-serif; color : White; font-size: 12px}
+TD.listing {font-family : Arial, Helvetica, sans-serif; color : Black; font-size: 12px}
 TD.body {font-family : Arial, Helvetica, sans-serif; }
 TD {font-family : Arial, Helvetica, sans-serif;}
 TD.white {font-family : Arial, Helvetica, sans-serif; text-decoration : none; color : White;}
@@ -126,8 +129,8 @@ div.standardsmall {font-family : Arial, Helvetica, sans-serif; font-size : small
 <form action="/elsie?JSP=SearchResults" method="POST" onsubmit="return checkZip(this)">
 
 <input style="font-family: Courier" name="search_type" type="HIDDEN" value="W0">
-<input style="font-family: Courier" name="start_date" type="HIDDEN" value="12/20/01">
-<input style="font-family: Courier" name="end_date" type="HIDDEN" value="12/20/01">
+<input style="font-family: Courier" name="start_date" type="HIDDEN" value="05/29/02">
+<input style="font-family: Courier" name="end_date" type="HIDDEN" value="05/29/02">
 
 <table border="0" width="100%">
 <tbody><tr>
