--- a/a/al/ale/alertra.com.html
+++ b/a/al/ale/alertra.com.html
@@ -1,15 +1,69 @@
-<!--The following is the downloaded HTML source of the alertra.com privacy policy that was archived on 2001-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011215072840id_/http%3A//www.alertra.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the alertra.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602081835id_/http%3A//alertra.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
-<base href="http://alertra.com/">
+<base href="http://www.alertra.com/">
 <title>Alertra Web Site Monitoring Service</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta name="keywords" content="site monitoring, web monitoring, website monitoring, web site monitoring, web, site, monitoring">
+<meta name="description" content="Website monitoring service checks your site remotely from worldwide monitoring stations as often as once every minute. Receive an e-mail or phone call when your site goes down.">
 <meta name="author" content="Alertra, Inc.">
 <meta name="copyright" content="Alertra, Inc.">
 <link href="/stylesheet" rel="stylesheet" type="text/css">
 </head>
-<body>
+
+
+
+
+
+
+
+
+
+
+
+
+<body background="http://www.alertra.com/img/bg" marginwidth="10" leftmargin="10" marginheight="10" topmargin="10">
+<table align="center" cellpadding="0" cellspacing="0" border="0">
+<tbody><tr><td colspan="3"><img src="http://www.alertra.com/img/header_top" alt="" height="76" width="755" border="0"></td></tr>
+<form action="/spotcheck" method="Post" name="f"></form>
+<tr>
+<td width="535" valign="top"><img src="http://www.alertra.com/img/header_bottom" alt="" height="25" width="535" border="0"></td>
+<td width="151" background="http://www.alertra.com/img/check_bg">
+  <input type="text" name="checkurl" size="15" style="width:147" maxlength="254">
+</td>
+<td width="69" valign="top" background="http://www.alertra.com/img/check_bg">
+  <input src="img/btn_check" type="image" alt="SpotCheck" border="0" value="check" name="check" align="top">
+</td>
+</tr>
+
+<tr><td colspan="3"><map name="HeadMap"><area shape="RECT" coords="161, 0, 251, 19" href="/"><area shape="RECT" coords="252, 0, 340, 19" href="/features"><area shape="RECT" coords="341, 0, 429, 19" href="/faq"><area shape="RECT" coords="430, 0, 519, 19" href="/pricing"><area shape="RECT" coords="520, 0, 608, 19" href="/contact"></map><a href="/"><img ismap="" usemap="#HeadMap" src="http://www.alertra.com/img/nav_top" width="755" border="0"></a></td></tr>
+</tbody></table>
+
+<table align="center" cellpadding="1" cellspacing="0" border="0" bgcolor="#003B3F"><tbody><tr><td>
+
+<table align="center" cellpadding="0" cellspacing="0" border="0" bgcolor="#FFFFFF">
+<tbody><tr valign="top" height="500">
+<td width="120">
+<table height="100%" border="0" cellpadding="0" cellspacing="0">
+<tbody><tr valign="top"><td>
+
+  <div><map name="NavMap"><area shape="RECT" coords="0, 0, 119, 25" href="https://www.alertra.com"><area shape="RECT" coords="0, 26, 119, 49" href="/signup"></map><a href="/"><img ismap="" usemap="#NavMap" src="http://www.alertra.com/img/nav_left_1" width="120" border="0"></a></div>
+
+</td></tr>
+
+
+</tbody></table>
+
+
+<br>
+</td>
+<td width="10"><img src="http://www.alertra.com/img/space1" alt="" height="1" width="1" border="0"></td>
+<td width="493">
+<br>
+
+
+
 
 <div class="h1">Alertra, Inc.</div>
 <div class="h1">PRIVACY STATEMENT</div><br>
@@ -21,7 +75,7 @@ The following discloses the information gathering and dissemination practices fo
 
 <p class="LtlLabel">
 <b>Registration Forms</b><br>
-Our site's registration form requires users to give us their e-mail address, and optionally credit card billing information.
+Our site's registration form requires users to give us their e-mail address, other contact information, and optionally credit card billing information.
 </p>
 
 <p class="LtlLabel">
@@ -29,17 +83,13 @@ Your account e-mail address will be used in the following ways:
 </p>
 
 <table cellpadding="5">
-<tbody><tr valign="top"><td width="20" align="left"><img src="http://alertra.com/img/bullet" alt="" height="20" width="20" border="0"></td><td class="LabelS">To verify your identity (password also required).</td></tr>
-<tr valign="top"><td width="20" align="left"><img src="http://alertra.com/img/bullet" alt="" height="20" width="20" border="0"></td><td class="LabelS">To notify you of changes in device status.</td></tr>
-<tr valign="top"><td width="20" align="left"><img src="http://alertra.com/img/bullet" alt="" height="20" width="20" border="0"></td><td class="LabelS">To notify you of system changes or problems with your account that may affect your service.</td></tr>
-<tr valign="top"><td width="20" align="left"><img src="http://alertra.com/img/bullet" alt="" height="20" width="20" border="0"></td><td class="LabelS">To send you a weekly device summary report which may also include promotional material
- from us and a few of our partners.</td></tr>
-<tr valign="top"><td width="20" align="left"><img src="http://alertra.com/img/bullet" alt="" height="20" width="20" border="0"></td><td class="LabelS">At your discretion, your account e-mail address may also be used to send a monthly
- newsletter which may contain promotional material from us and a few of our partners.</td></tr>
+<tbody><tr valign="top"><td width="20" align="left"><img src="http://www.alertra.com/img/bullet" alt="" height="20" width="20" border="0"></td><td class="LabelS">To notify you of changes in device status.</td></tr>
+<tr valign="top"><td width="20" align="left"><img src="http://www.alertra.com/img/bullet" alt="" height="20" width="20" border="0"></td><td class="LabelS">To notify you of system changes or problems with your account that may affect your service.</td></tr>
+<tr valign="top"><td width="20" align="left"><img src="http://www.alertra.com/img/bullet" alt="" height="20" width="20" border="0"></td><td class="LabelS">To send you a weekly device summary report.</td></tr>
 </tbody></table>
 
 <p class="LtlLabel">
-Your e-mail address will never be shared with a third party.
+Your e-mail address and other contact information will never be shared with a third party.
 </p>
 
 <p class="LtlLabel">
@@ -49,14 +99,7 @@ of change in device status.
 
 <p class="LtlLabel">
 Your credit card billing information will be used only for authorization and settlement 
-of charges you incur by using our services or buying our products. Your name and address
-will not be used for any other purpose.</p>
-
-<p class="LtlLabel">
-<b>Choice/Opt-Out</b><br>
-Our site provides premium account holders the opportunity to opt-out of receiving promotional/marketing
-information from us and our partners. You can do this by un-checking the appropriate boxes on your account information form.
-</p>
+of charges you incur by using our services or buying our products.</p>
 
 <p class="LtlLabel">
 <b>Security</b><br>
@@ -96,6 +139,109 @@ Alertra, Inc. is not responsible for the privacy practices or the content of suc
 </p>
       
 <br>
+
+
+<br>
+</td>
+<td width="20"><img src="http://www.alertra.com/img/space1" alt="" height="1" width="1" border="0"></td>
+<td align="center" width="110" bgcolor="#00BFB9">
+<br>
+
+
+
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
+<tbody><tr><td width="9"><img src="http://www.alertra.com/img/space1" alt="" height="1" width="1" border="0"></td><td>
+<form action="/login" method="post">
+<div><font face="Verdana" size="1" color="#000000">E-mail:</font></div>
+<div><input type="text" name="login_user" size="8" style="width:90" maxlength="80"></div>
+<div><font face="Verdana" size="1" color="#000000">Password:</font></div>
+<div><input type="password" name="login_pw" size="8" style="width:90" maxlength="20"></div>
+<br>
+</form></td></tr>
+<tr><td colspan="2">
+<div align="center"><input src="img/btn_login" type="image" alt="Login" border="0" value="login" name="login"></div>
+
+</td></tr></tbody></table>
+
+
+<br>
+
+<div><img src="http://www.alertra.com/img/other" alt="" height="22" width="100" border="0"></div>
+<table border="0" width="100" cellpadding="1" cellspacing="0" bgcolor="#00777F">
+<tbody><tr> <td width="100%">
+<table width="100%" border="0" cellpadding="2" cellspacing="0" bgcolor="#FFFFFF">
+<tbody><tr> <td valign="top" width="100%">
+<table align="center" border="0" cellpadding="0" cellspacing="0">
+
+<tbody><tr><td class="LabelT">&nbsp;</td></tr>
+<tr><td class="LabelT" align="center"><a href="/signup"><b>Free Trial</b></a></td></tr>
+
+<tr><td class="LabelT">&nbsp;</td></tr>
+<tr><td class="LabelT" align="center"><a href="/articles">Articles</a></td></tr>
+<tr><td class="LabelT">&nbsp;</td></tr>
+<tr><td class="LabelT" align="center"><a href="/links/links_index">Resources</a></td></tr>
+<tr><td class="LabelT">&nbsp;</td></tr>
+<tr><td class="LabelT" align="center"><a href="/linktous">Link to Us</a></td></tr>
+<tr><td class="LabelT">&nbsp;</td></tr>
+<tr><td class="LabelT" align="center"><a href="/affiliates" target="new">Affiliates</a></td></tr>
+<tr><td class="LabelT">&nbsp;</td></tr>
+<tr><td class="LabelT" align="center"><a href="/resellers">Resellers</a></td></tr>
+<tr><td class="LabelT">&nbsp;</td></tr>
+<tr><td class="LabelT" align="center"><a href="/sendlink">Tell a Friend</a></td></tr>
+<tr><td class="LabelT">&nbsp;</td></tr>
+</tbody></table>
+</td></tr></tbody></table></td></tr></tbody></table>
+
+<br><br>
+
+<form action="/newsletter" method="post">
+<div align="center"><font face="Verdana" size="1" color="#000000"><b>The Alertra News</b><br><i>It's all about<br>user experience.</i></font></div>
+<div align="center"><font face="Verdana" size="1" color="#000000">E-mail:</font></div>
+<div align="center"><input type="text" name="subscribe_email" size="8" style="width:90" maxlength="80"></div>
+<div align="center"><input src="img/btn_subscribe" type="image" alt="Subscribe" border="0" value="" name="subscribe"></div>
+<div align="center"><a href="/newsletter"><font face="Verdana" size="1">Read More</font></a></div>
+</form>
+
+<br>
+<div><a href="/"><img src="http://www.alertra.com/img/alertra" alt="" height="31" width="88" border="0"></a></div>
+<br>
+
+
+
+<br>
+</td>
+</tr>
+</tbody></table>
+
+</td></tr></tbody></table>
+
+<table align="center" border="0" cellpadding="0" cellspacing="0">
+
+<tbody><tr>
+<td style="background:#003B3F" width="15"><img src="http://www.alertra.com/img/rcll_b" width="15" height="30" align="absmiddle"></td>
+<td align="center" width="740" bgcolor="#004040"><font face="Verdana" size="1" color="#FFFFFF">
+© 2000-2002 Alertra, Inc. All rights reserved.
+Please read our <a href="/privacy"><font face="Verdana" size="1" color="#FFFFFF">privacy statement</font></a>
+and our <a href="/terms"><font face="Verdana" size="1" color="#FFFFFF">terms of service</font></a>.
+</font></td>
+</tr>
+
+<tr valign="bottom">
+<td height="20" colspan="2" align="center"><font face="Verdana" size="1" color="#00595F">
+<a href="/">Web Site Monitoring Home</a> |
+<a href="/features">Features</a> |
+<a href="/faq">FAQ</a> |
+<a href="/pricing">Pricing</a> |
+<a href="/contact">Contact Us</a>
+
+| <a href="http://www.alertra.com/signup">Sign Up</a>
+
+</font></td>
+</tr>
+
+</tbody></table>
+
+
 
 
 
