--- a/v/vo/voc/vocabulary.com.html
+++ b/v/vo/voc/vocabulary.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the vocabulary.com privacy policy that was archived on 2001-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011212145225id_/http%3A//vocabulary.com/VUprivacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vocabulary.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602082841id_/http%3A//www.vocabulary.com/VUprivacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Vocabulary University Privacy Policy
