--- a/c/ce/cel/celebrity-mania.com.html
+++ b/c/ce/cel/celebrity-mania.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the celebrity-mania.com privacy policy that was archived on 2001-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011214104710id_/http%3A//celebrity-mania.com/html/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the celebrity-mania.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602083725id_/http%3A//www.celebrity-mania.com/html/privacy.htm) for the most accurate reproduction.-->
 
-<html><head><script src="http://ad3.peel.com/frames/PMNforce.js"></script>
+<html><head><script src="http://www.peel.net/frames/PMNforce.js"></script>
 
 <meta name="Language" content="english">
 <meta name="robots" content="All">
