--- a/n/no/nom/nomorehotels.com.html
+++ b/n/no/nom/nomorehotels.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nomorehotels.com privacy policy that was archived on 2001-04-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010409103750id_/http%3A//nomorehotels.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nomorehotels.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602084626id_/http%3A//nomorehotels.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/nmhmaster.dwt" --><head>
 <!-- #BeginEditable "insert%20meta/title%20here%20only" --> 
@@ -22,10 +22,10 @@
     <td width="100%"> <img src="images/globe0001.jpg" width="550" height="60"></td>
   </tr>
   <tr>
-    <td bgcolor="#FFFFFF"><img src="images/pixel.gif" width="100%" height="2"></td>
+    <td bgcolor="#FFFFFF"><img src="file:///C|/dellnmh/images/pixel.gif" width="100%" height="2"></td>
   </tr>
   <tr>
-    <td><img src="images/pixel.gif" height="18"></td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
     <td bgcolor="#CCCCCC"><img src="images/menu_01.gif" width="216" height="18" border="0"><a href="http://www.nomorehotels.com/default.htm"><img src="images/menu_03.gif" width="72" height="18" border="0"></a><a href="http://www.nomorehotels.com/help.htm"><img src="images/menu_04.gif" width="90" height="18" border="0"></a><a href="http://www.nomorehotels.com/contact.htm"><img src="images/menu_05.gif" width="108" height="18" border="0"></a><a href="http://www.nomorehotels.com/disclaimer.htm"><img src="images/menu_06.gif" width="126" height="18" border="0"></a><a href="http://www.apartmentsexpress.com"><img src="images/menu_07.gif" width="134" height="18" border="0"></a></td>
@@ -129,10 +129,10 @@
           a Listing</a> | <a href="https://www.nomorehotels.com/secure/edit/default.htm">Edit 
           a Listing</a> | <a href="privacy.htm" title="Privacy policy">Privacy</a> 
           | <a href="http://www.nomorehotels.com/new/pageSelect.htm">Advertise</a> 
-          | <a href="contact.htm" title="Contact us">Contact</a> <a href="http://www.apartmentsexpress.com" title="Long term NYC">Long 
-          Term NYC</a> | <a href="us/?reg=us">US</a> | <a href="hw/?reg=hw">Hawaii</a> 
-          | <a href="cb/?reg=cb">Caribbean</a> | <a href="ca/?reg=ca">Canada</a> 
-          | <a href="mx/?reg=mx">Mexico</a> | <a href="eu/?reg=eu">Europe</a> 
+          | <a href="contact.htm" title="Contact us">Contact</a> |<a href="http://www.apartmentsexpress.com" title="Long term NYC"> 
+          Long Term NYC</a> | <a href="us/?reg=us">US</a> | <a href="hw/?reg=hw">Hawaii</a> 
+          | <a href="cb/?reg=cb">Caribbean</a> | <a href="ca/?reg=ca">Canada 
+          </a>|<a href="mx/?reg=mx">Mexico</a> | <a href="eu/?reg=eu">Europe</a> 
           | <a href="au/?reg=au">Australia and New Zealand</a> | <a href="sp/?reg=sp"> 
           South Pacific</a> | <a href="sa/?reg=sa">South and Central America</a> 
           | <a href="as/?reg=as">Asia</a> | <a href="af/?reg=af">Africa</a> 
