--- a/a/ac/acl/aclj.org.html
+++ b/a/ac/acl/aclj.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the aclj.org privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201230913id_/http%3A//aclj.org/webpages/aclj_privacy_statement.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the aclj.org privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602084813id_/http%3A//www.aclj.org/webpages/aclj_privacy_statement.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><!-- #BeginTemplate "/Templates/other-page.dwt" --><head>
 <meta name="AUTHOR" content="Graphic Design by Dan Rutledge.  Webmaster: Jim Guilday">
