guess.com (archived on 2002-06-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 3710,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.54,
  "homepage_snapshot_redirected_domain": "guess.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020328054808id_/http://www.guess.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020328054808id_/http%3A//guess.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "guess.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020602110019id_/http%3A//www.guess.com/section.asp%3Fsection%3Dprivacy",
  "policy_title": "GUESS?",
  "policy_url": "guess.com/section.asp?section=privacy",
  "sha1": "407a51164995956931716ea60a4a6838d941a1cf",
  "simhash": 1669963673804233649,
  "simhash_updated": true,
  "site_hostname": "guess.com",
  "site_url": "http://guess.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20020602110019",
  "word_count": 598,
  "year": 2002
}

--- a/g/gu/gue/guess.com.html
+++ b/g/gu/gue/guess.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the guess.com privacy policy that was archived on 2001-10-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011004213932id_/http%3A//www.guess.com/section.asp%3Fsection%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the guess.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602110019id_/http%3A//www.guess.com/section.asp%3Fsection%3Dprivacy) for the most accurate reproduction.-->
 
 <html><head>
 		<title>GUESS?</title>
@@ -8,13 +8,13 @@
 <body bgcolor="ffffff" text="999999" link="cc9933" vlink="cc9933" alink="cc9933">
 <map name="main">
 <area coords="0,10,73,34" href="http://www.guess.com/womens.asp" alt="Women's" target="_top" shape="RECT">
-<area alt="Men's" coords="77,10,132,33" href="http://www.guess.com/mens.asp" target="_top" shape="RECT">
-<area alt="" coords="576,8,680,33" href="http://www.guess.com/guessinc.asp" target="_top" shape="RECT">
-<area alt="" coords="456,10,576,33" href="http://www.guess.com/models.asp" target="_top" shape="RECT">
-<area alt="" coords="132,12,196,36" href="http://www.guess.com/girls.asp" target="_top" shape="RECT">
-<area alt="" coords="197,12,259,34" href="http://www.guess.com/boys.asp" shape="RECT" target="_top">
-<area alt="BabyGUESS.com" coords="260,11,359,34" href="http://www.guess.com/bgirls.asp" target="_top" shape="RECT">
-<area alt="" coords="359,13,455,34" href="http://www.guess.com/bboys.asp" target="_top" shape="RECT">
+<area coords="77,10,132,33" href="http://www.guess.com/mens.asp" target="_top" shape="RECT">
+<area coords="576,8,680,33" href="http://www.guess.com/guessinc.asp" target="_top" shape="RECT">
+<area coords="456,10,576,33" href="http://www.guess.com/modelsandmore.asp" alt="Models" target="_top" shape="RECT">
+<area coords="132,12,196,36" href="http://www.guess.com/girls.asp" alt="GUESSKids.com" target="_top" shape="RECT">
+<area coords="197,12,259,34" href="http://www.guess.com/boys.asp" alt="GUESSKids.com" shape="RECT" target="_top">
+<area coords="260,11,359,34" href="http://www.guess.com/bgirls.asp" target="_top" shape="RECT">
+<area coords="359,13,455,34" href="http://www.guess.com/bboys.asp" target="_top" shape="RECT">
 </map>
 <nobr><a href="http://www.guess.com/" target="_top"><img src="/Images/TopNav/triangles/triangle_white.gif" width="70" height="50" border="0"></a><img src="/Images/TopNav/main_nav.gif" width="680" height="50" border="0" usemap="#main"></nobr><br><br><br><table cellpadding="0" cellspacing="0" border="0" width="585">
 	<tbody><tr><td><p>
@@ -57,28 +57,23 @@ Los Angeles, CA 90021<br>
 </font>
 	</td></tr>
 </tbody></table><map name="bttm1">
-<area alt="" coords="0,0,75,24" href="http://www.guess.com/signin/" shape="RECT">
-<area alt="" coords="77,0,221,23" href="http://www.guess.com/checkout/default.asp?step=basket" shape="RECT">
-<area alt="" coords="224,0,308,23" href="https://www.guess.com/checkout/" shape="RECT">
-<area alt="" coords="307,0,390,23" href="http://www.guess.com/sitemap.asp" shape="RECT">
-<area alt="" coords="388,1,482,24" href="http://www.guess.com/sizechart.asp" shape="RECT">
-<area alt="" coords="481,0,581,23" href="http://www.guess.com/jeanguide.asp" shape="RECT">
-<area alt="" coords="581,1,690,24" href="http://www.guess.com/guesscorp/locator/" shape="RECT">
-<area alt="" coords="691,0,750,26" href="http://www.guess.com/section.asp?section=help" shape="RECT">
+<area coords="0,0,75,24" href="http://www.guess.com/signin/" shape="RECT">
+<area coords="77,0,221,23" href="http://www.guess.com/checkout/default.asp?step=basket" shape="RECT">
+<area coords="224,0,308,23" href="https://www.guess.com/checkout/" shape="RECT">
+<area coords="307,0,390,23" href="http://www.guess.com/sitemap.asp" shape="RECT">
+<area coords="388,1,482,24" href="http://www.guess.com/sizechart.asp" shape="RECT">
+<area coords="481,0,581,23" href="http://www.guess.com/jeanguide.asp" shape="RECT">
+<area coords="581,1,690,24" href="http://www.guess.com/guesscorp/locator/" shape="RECT">
+<area coords="691,0,750,26" href="http://www.guess.com/section.asp?section=help" shape="RECT">
 </map>
 
 <img src="/Images/BottomNav/bottom_nav.gif" width="750" height="26" border="0" usemap="#bttm1">
-<br><table width="590" cellpadding="0" cellspacing="0" border="0">
-<tbody><tr>
-<td> <center>
-</center>
-</td></tr></tbody></table>
+<br>
 <table width="585" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr><td><br>
 <font face="Verdana,Arial,Helvetica" size="1">
 
 We can accept orders within the 48 continental United States, Alaska, and Hawaii.<br> We cannot accept orders in Canada at this time.<br><br>
-
 </font>
 </td></tr></tbody></table>
 
