--- a/c/ce/cel/celebritypro.com.html
+++ b/c/ce/cel/celebritypro.com.html
@@ -1,15 +1,12 @@
-<!--The following is the downloaded HTML source of the celebritypro.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201131231id_/http%3A//www.celebritypro.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the celebritypro.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602110508id_/http%3A//www.celebritypro.com/privacy.htm) for the most accurate reproduction.-->
 
-<html><head><script src="http://ad3.peel.com/frames/PMNforce.js"></script>
-
+<html><head><script src="http://ad2.peel.com/frames/PMNforce.js"></script>
 
 
 <title>CelebrityPro.com - Privacy Statement</title>
 <meta name="DESCRIPTION" content="CelebrityPro.com - Privacy Statement">
 <meta http-equiv="Expires" content="Mon, 10 Apr 2000 12:00:00 GMT">
-<meta http-equiv="Page-Enter" content="RevealTrans(Duration=2.0, Transition=12)">
-<meta http-equiv="Page-Exit" content="RevealTrans(Duration=2.0, Transition=12)">
 <meta content="text/html; charset=windows_1252" http-equiv="Content-Type">
 <base href="http://www.celebritypro.com/index.html">
 <link rel="stylesheet" href="celebs.css" type="text/css">
@@ -19,11 +16,7 @@
 <tbody><tr><td align="center" valign="top" bgcolor="005969">
 <img src="pictures/cplogo.gif" height="120" width="186" alt="CelebrityPro.com presents"><br>
 <font color="ffff00" size="3"><br><br><b>Navigation Menu</b></font><br><br>
-<iframe src="http://www.celebritypro.com/buffy/nav_menu.htm" width="186" height="375" scrolling="no" frameborder="0" marginheight="0" marginwidth="0" noresize=""><table><tr><td><DIV style="text-align : left;"><a href="http://www.celebritypro.com"><font color=93f4ff><b>Home</b></font></a><br>&nbsp;<a href="http://www.celebritypro.com/directory.htm"><font color=93f4ff><b>Celebrities</b></font></a><br>&nbsp;&nbsp;<a href="http://www.celebritypro.com/directory_y.htm"><font color=93f4ff><b>Movies/TV</b></font></a><br>&nbsp;&nbsp;<a href="http://www.celebritypro.com/directory_z.htm"><font color=93f4ff><b>Music/Radio</b></font></a><br>&nbsp;&nbsp;<a href="http://www.celebritypro.com/directory_x.htm"><font color=93f4ff><b>Books/Magazines</b></font></a>&nbsp;&nbsp;<a href="http://www.celebritypro.com/skins/skin_center.htm"><font color=93f4ff><b>Browser Skins</b></font></a><br><a href="http://www.celebritypro.com/buff-flix"><font color=00ccff><b>Movies</b></font></a><br><a href="http://www.celebritypro.com/buffmusik"><font color=00ccff><b>Music</b></font></a><br><a href="http://uzgamez.subportal.com"><font color=00ccff><b>Games</b></font></a><br><a href="http://www.celebritypro.com/uzsportz.htm"><font color=00ccff><b>Sports</b></font></a><br><a href="http://www.celebritypro.com/lookstar"><font color=00ccff><b>Search the Web</b></font></a><br><a href="http://www.celebritypro.com/desktop_enhancements.htm"><font color=00ccff><b>Desktop Downloads</b></font></a><br><a href="http://uzware.subportal.com"><font color=00ccff><b>FREE Software</b></font></a><br><a href="Http://uz4laffs.subportal.com/jokes/"><font color=00ccff><b>Laffs &amp; Jokes</b></font></a><br><a href="http://http://www.celebritypro.com/uznooz.htm"><font color=00ccff><b>News &amp; Weather</b></font></a><br><a href="http://uzfit.subportal.com/health/"><font color=00ccff><b>Health &amp; Fitness</b></font></a><br></div></td></tr></table></iframe>
-<form method="GET" action="http://mysearch.looksmart.com/query.go"><table width="186" cellpadding="0" cellspacing="0" border="0" bgcolor="005969" align="center"><tbody><tr><td colspan="2" align="center"><img src="http://mysearch1.looksmart.com/html.go?rid=25187&amp;panel=1" width="1" height="1"><input name="query" size="14" maxlength="800"></td></tr><tr><td align="center"><input type="hidden" value="db_25187" checked="" name="db"><font size="2" color="93f4ff">Search This Site</font><input type="hidden" name="db" value="db_0"></td><td width="40"><input type="image" src="http://mysearch.looksmart.com/i/ls-go.gif" border="0" alt="Go!" name="submit" width="40" height="20"></td></tr><tr><td colspan="2" align="center"><center><a href="http://www.lookstar.com"><font color="93f4ff"><b>Search the Web</b></font></a></center></td></tr></tbody></table></form><br>
-<a href="headlines.htm"><img src="pictures/headlines.gif" border="0" height="45" width="120" alt="Get today's top entertainment headlines"></a><br>
-<br><a href="http://www.recommend-it.com/l.z.e?s=379843" target="new"><img src="lilbut.gif" border="0" height="31" width="88" alt="Recommend CelebrityPro.com"></a><br><br><br>
-<a href="http://apps.flycast.com/webkit/main.cgi?2509512" target="new"><img src="pictures/button1.gif" alt="Click here for advertising information" height="60" width="120" border="0"><br><br></a>
+<iframe src="http://www.celebritypro.com/buffy/nav_menu.htm" width="186" height="375" scrolling="no" frameborder="0" marginheight="0" marginwidth="0" noresize=""><table><tr><td><DIV style="text-align : left;"><a href="http://www.celebritypro.com" target="_top"><font color=93f4ff><b>Home</b></font></a><br><br><a href="http://www.celebritypro.com/buff-flix/index.html" target="_top"><font color=00ccff><b>Movies</b></font></a><br><a href="http://www.celebritypro.com/buffmusik/index.html" target="_top"><font color=00ccff><b>Music</b></font></a><br><br><a href="http://www.celebritypro.com/domestic/index.html" target="_top"><font color=00ccff><b>Other Features</b></font></a><br></div></td></tr></table></iframe>
 </td><td align="center" valign="top" width="588">
 <table bgcolor="005969" border="0" rules="none" cellpadding="0" cellspacing="0">
 <tbody><tr><td width="468"><br><h2><font color="93f4ff">Privacy Statement</font></h2></td>
