--- a/t/th/the/thegauntlet.com.html
+++ b/t/th/the/thegauntlet.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thegauntlet.com privacy policy that was archived on 2001-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011214084423id_/http%3A//thegauntlet.com/policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thegauntlet.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602112006id_/http%3A//www.thegauntlet.com/policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Privacy Statement</title>
@@ -130,8 +130,8 @@ Choice/Opt-Out
 <li>
 
             You can visit the following URL: 
-<a href="http://www.thegauntlet.com/mailinglist.html">
-http://www.thegauntlet.com/mailinglist.html
+<a href="http://www.thegauntlet.com/mailinglist/">
+http://www.thegauntlet.com/mailinglist/
 </a>
 </li>
 
