calottery.com (archived on 2002-06-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 3613,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.3,
  "homepage_snapshot_redirected_domain": "calottery.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020526222804id_/http://www.calottery.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020526222804id_/http%3A//calottery.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "calottery.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020602112702id_/http%3A//www.calottery.com/privacy.asp",
  "policy_title": "California Lottery - Privacy Policy",
  "policy_url": "calottery.com/privacy.asp",
  "sha1": "b3569c4e9dd97e18974a0e2ab759c278ad2a64ee",
  "simhash": 218527451095650895,
  "simhash_updated": false,
  "site_hostname": "calottery.com",
  "site_url": "http://calottery.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20020602112702",
  "word_count": 567,
  "year": 2002
}

--- a/c/ca/cal/calottery.com.html
+++ b/c/ca/cal/calottery.com.html
@@ -1,14 +1,15 @@
-<!--The following is the downloaded HTML source of the calottery.com privacy policy that was archived on 2001-08-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010803004918id_/http%3A//www.calottery.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the calottery.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602112702id_/http%3A//www.calottery.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 	<title>California Lottery - Privacy Policy</title>
+<meta name="MSSmartTagsPreventParsing" content="true">
 
 </head>
 <body bgcolor="#FFFFFF" text="#000000" link="#003399" vlink="#003399" alink="#003399" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <table width="580" cellpadding="0" cellspacing="0" border="0">
 <tbody><tr>
-	<td bgcolor="#99FF99"><a href="http://calottery.com/"><img src="images/logo.gif" width="145" height="80" border="0" alt="California Lottery"></a></td>
+	<td bgcolor="#99FF99"><a href="http://www.calottery.com/"><img src="images/logo.gif" width="145" height="80" border="0" alt="California Lottery"></a></td>
 	<td valign="BOTTOM" bgcolor="#663399"><img src="images/titles/privacy.gif" width="435" height="44" border="0" alt="California Lottery - Privacy Policy"></td>
 </tr>
 </tbody></table>
@@ -19,7 +20,7 @@
 	<a href="winningnumbers.asp"><img src="images/buttons/winningnumbers.gif" width="145" height="18" border="0" alt="Winning Numbers"></a><br>
 	<a href="whatsnew.asp"><img src="images/buttons/whatsnew.gif" width="145" height="18" border="0" alt="What's New"></a><br>
 	<a href="mediainformation.asp"><img src="images/buttons/mediainformation.gif" width="145" height="18" border="0" alt="Media Information"></a><br>
-	<a href="http://calottery.com/"><img src="images/buttons/home.gif" width="145" height="18" border="0" alt="Home"></a><br>
+	<a href="http://www.calottery.com/"><img src="images/buttons/home.gif" width="145" height="18" border="0" alt="Home"></a><br>
 	<a href="currentjackpot.asp"><img src="images/buttons/currentjackpot.gif" width="145" height="18" border="0" alt="Current Jackpot"></a><br>
 	<a href="games.asp"><img src="images/buttons/games.gif" width="145" height="18" border="0" alt="Games"></a><br>
 	<a href="winnersgallery.asp"><img src="images/buttons/winnersgallery.gif" width="145" height="18" border="0" alt="Winners Gallery"></a><br>
@@ -27,7 +28,7 @@
 	<a href="heroesineducation/nominate.asp"><img src="images/buttons/heroesineducation.gif" width="145" height="18" border="0" alt="Heroes in Education"></a><br>
 	<a href="locations.asp"><img src="images/buttons/locations.gif" width="145" height="18" border="0" alt="Retail/Office Locations"></a><br>
 	<a href="feedback.asp"><img src="images/buttons/feedback.gif" width="145" height="18" border="0" alt="Feedback"></a><br>
-	<a href="contract_opps.asp"><img src="images/buttons/contract_opps.gif" width="145" height="18" border="0" alt="Contract Opportunities"></a><br>
+	<a href="contract_opps.asp"><img src="images/buttons/contract_opps.gif" width="145" height="18" border="0" alt="Vendor Opportunities"></a><br>
 	<a href="jobopportunities.asp"><img src="images/buttons/jobopportunities.gif" width="145" height="18" border="0" alt="Job Opportunities"></a><br>
 	<a href="about.asp"><img src="images/buttons/about.gif" width="145" height="18" border="0" alt="About"></a><br>
 	<a href="sitemap.asp"><img src="images/buttons/sitemap.gif" width="145" height="18" border="0" alt="Site Map"></a><br>
@@ -40,10 +41,10 @@
 	<tbody><tr>
 		<td><img src="images/spacer.gif" width="6" height="1"></td>
 		<td valign="TOP" align="CENTER"><font size="1" face="arial, helvetica, sans serif">
-		©1999-2001 California Lottery®<br>
+		©1999-2002 California Lottery®<br>
 		<a href="privacy.asp">Privacy Policy</a><br>
-		Thu&nbsp;8/2/01 5:48:13 PM<br>
-		Site maintained by <a title="Visit SacWeb" href="http://www.sacweb.com/" target="NEW">SacWeb</a>
+		Sun&nbsp;6/2/2002 4:27:02 AM<br>
+		Site maintained by <br><a title="Visit Jel Productions" href="http://www.jel.net" target="NEW">Jel Productions</a>
 		</font></td>
 	</tr>
 	</tbody></table>
@@ -51,7 +52,7 @@
 	<font size="1" face="arial, helvetica, sans serif">
 		<center>
 		Revision Date:<br>
-		Thu&nbsp;8/2/01&nbsp;12:00:00 AM
+		Sun&nbsp;6/2/2002&nbsp;12:00:00 AM
 	</center></font></td>
 	<td valign="TOP" background="images/stripebg.gif"><img src="images/titles/privacylow.gif" width="435" height="13" border="0"><br>
 			
