jobopenings.net (archived on 2002-06-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "parked",
  "char_count": 4723,
  "classifier_probability": 0.9,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.62,
  "homepage_snapshot_redirected_domain": "jobopenings.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020328105658id_/http://www.jobopenings.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020328105658id_/http%3A//jobopenings.net",
  "interval": "2002_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "jobopenings.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020602113432id_/http%3A//www.jobopenings.net/privacy.htm",
  "policy_title": "Privacy Policy Statement for JobOpenings.net",
  "policy_url": "jobopenings.net/privacy.htm",
  "sha1": "1f3fea0ff7365e2b6c52ee619645bae636d8474c",
  "simhash": 8742333724320455446,
  "simhash_updated": false,
  "site_hostname": "jobopenings.net",
  "site_url": "http://jobopenings.net",
  "smog": 15.77,
  "strict_updated": false,
  "timestamp": "20020602113432",
  "word_count": 739,
  "year": 2002
}

--- a/j/jo/job/jobopenings.net.html
+++ b/j/jo/job/jobopenings.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jobopenings.net privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201212905id_/http%3A//jobopenings.net/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jobopenings.net privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602113432id_/http%3A//www.jobopenings.net/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -125,9 +125,9 @@
   <tr>
    <td nowrap="">
    <p align="center"><font size="1"><i>&nbsp;</i><font face="Arial">
-Copyright © 1998-2001 by <a href="http://www.ace-lynchburg.com/" target="_top">A.C.E., Inc</a>.
+Copyright © 1998-2002 by <a href="http://www.ace-lynchburg.com/" target="_top">A.C.E., Inc</a>.
 All rights reserved.<br>
-Email: <a href="mailto:webmaster@jobopenings.net" target="_top">webmaster@jobopenings.net</a> </font> </font></p></td>
+Email: <a href="mailto:webmaster@Jobopenings.net" target="_top">Webmaster</a> </font> </font></p></td>
    <td><a href="http://www.virginia.adgrafix.com/" target="_blank"><img border="0" src="http://www.ace-lynchburg.com/business/logos/adgrafix_btn.gif" width="88" height="31"></a></td>
   </tr>
  </tbody>
@@ -138,7 +138,7 @@ Email: <a href="mailto:webmaster@jobopenings.net" target="_top">webmaster@jobope
  </tbody>
 </table>
 </center></div>
-<!--webbot bot="Include" endspan i-checksum="43102" -->
+<!--webbot bot="Include" endspan i-checksum="15204" -->
 
      </td>
     </tr>
