foreclosures.com (archived on 2002-06-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;realestate",
  "char_count": 4024,
  "classifier_probability": 0.9,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.06,
  "homepage_snapshot_redirected_domain": "foreclosures.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020524181354id_/http://foreclosures.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020524181354id_/http%3A//foreclosures.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "foreclosures.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020602115231id_/http%3A//www.foreclosures.com/pages/privacy_policy.asp",
  "policy_title": "Foreclosures.com - Privacy Policy",
  "policy_url": "foreclosures.com/pages/privacy_policy.asp",
  "sha1": "5db1c3cdf8729425c19e6ab6858f7ca4b58485a5",
  "simhash": 13117633615570170632,
  "simhash_updated": false,
  "site_hostname": "foreclosures.com",
  "site_url": "http://foreclosures.com",
  "smog": 12.63,
  "strict_updated": false,
  "timestamp": "20020602115231",
  "word_count": 648,
  "year": 2002
}

--- a/f/fo/for/foreclosures.com.html
+++ b/f/fo/for/foreclosures.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the foreclosures.com privacy policy that was archived on 2001-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011211172153id_/http%3A//www.foreclosures.com/pages/privacy_policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the foreclosures.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602115231id_/http%3A//www.foreclosures.com/pages/privacy_policy.asp) for the most accurate reproduction.-->
 
 <html><head><title>Foreclosures.com - Privacy Policy</title>
 
@@ -30,11 +30,12 @@ function openIT(u,W,H,X,Y,n,b,x,m,r) {
 
 <link rel="SHORTCUT ICON" href="http://www.foreclosures.com/favicon.ico"> 
 
+<title>The Foreclosure Experts - Foreclosures.com</title>
 <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
 <meta name="description" content="Foreclosures.com will guide you through the process of buying foreclosed property, and provide you with daily foreclosure listings.">
 <meta name="shortdescription" content="Foreclosures.com will guide you through the process of buying foreclosed property, and provide you with daily foreclosure listings. Learn how to buy real estate with none of your own money, and make a quick profit. Find foreclosure laws for every state.">
 <meta name="longdescription" content="Foreclosures.com will guide you through the process of buying foreclosed property, and provide you with daily foreclosure listings. Learn how to buy real estate with none of your own money, and make a quick profit. Find foreclosure laws for every state and check out our free monthly e-zine Foreclosure Forecast.">
-<meta name="keywords" content="bank repo's and foreclosures,homes for sale by owners,hud homes,repo sites,new york city foreclosures,real estate sales by owner,real estate,hud home sales,hud housing home,REO,R.E.O.,trustee sale,mortgage,trust deed">
+<meta name="keywords" content="foreclosure,forclosure,bank repo's and foreclosures,homes for sale by owners,hud homes,repo sites,new york city foreclosures,real estate sales by owner,real estate,hud home sales,hud housing home,REO,R.E.O.,trustee sale,mortgage,trust deed">
 <meta name="Author" content="Dave Ericsson Smith">
 
 <script language="JavaScript">
@@ -209,23 +210,23 @@ A:hover {color="red"; text-decoration: underline}
 <param name="5-URL1" value="http://www.foreclosures.com/pages/order_online.asp">
 <param name="5-Entry2" value="Foreclosure Lists">
 <param name="5-2-Entry1" value="Arizona">
-<param name="5-2-URL1" value="https://secure.cwo.com/foreclosures/arizona_order.asp">
+<param name="5-2-URL1" value="http://www.foreclosures.com/order/default.asp?state=az">
 <param name="5-2-Entry2" value="California">
-<param name="5-2-URL2" value="https://secure.cwo.com/foreclosures/ddi_web_order.asp">
+<param name="5-2-URL2" value="http://www.foreclosures.com/order/default.asp?state=ca">
 <param name="5-2-Entry3" value="Illinois">
-<param name="5-2-URL3" value="https://secure.cwo.com/foreclosures/illinois_order.asp">
+<param name="5-2-URL3" value="http://www.foreclosures.com/order/default.asp?state=il">
 <param name="5-2-Entry4" value="New York">
-<param name="5-2-URL4" value="https://secure.cwo.com/foreclosures/profiles_publications_order.asp">
+<param name="5-2-URL4" value="http://www.foreclosures.com/order/default.asp?state=ny">
 <param name="5-Entry3" value="Learning Courses">
 <param name="5-3-Entry1" value="Getting Started">
-<param name="5-3-URL1" value="https://secure.cwo.com/foreclosures/gettingstarted_order.asp">
+<param name="5-3-URL1" value="http://www.foreclosures.com/order/prod.asp?val=gs">
 <param name="5-3-Entry2" value="Mastering Deals">
-<param name="5-3-URL2" value="https://secure.cwo.com/foreclosures/mastering_order.asp">
+<param name="5-3-URL2" value="http://www.foreclosures.com/order/prod.asp?val=ms">
 <param name="5-3-Entry3" value="Mastering Lab (Live)">
 <param name="5-3-URL3" value="http://www.foreclosures.com/pages/mastering_systems_lab.asp">
 <param name="5-Entry4" value="Management Software">
 <param name="5-4-Entry1" value="REO Contact Directory">
-<param name="5-4-URL1" value="https://secure.cwo.com/foreclosures/reokey2000.asp">
+<param name="5-4-URL1" value="http://www.foreclosures.com/order/prod.asp?val=reokey">
 <param name="5-4-Entry2" value="Shark Bait!">
 <param name="5-4-URL2" value="http://www.foreclosures.com/pages/sharkbait.asp">
 </applet>
@@ -308,7 +309,7 @@ Foreclosures.com offers premium services, such as our foreclosure listing servic
 <td>
 <center>
 <b><font color="#DDDDDD" face="Arial,Helvetica" size="+3">1-800-310-7730</font></b><br>
-<font face="Arial" size="-2"><a href="http://lcweb.loc.gov/copyright">Copyright</a> © 1995-2001, <i>Tahoe Wheaton, Inc.</i> - All Rights Reserved.&nbsp;&nbsp; <a href="http://www.foreclosures.com/pages/privacy_policy.asp" style="cursor: help">Privacy Policy</a></font>
+<font face="Arial" size="-2"><a href="http://lcweb.loc.gov/copyright">Copyright</a> © 1995-2002, <i>Tahoe Wheaton, Inc.</i> - All Rights Reserved.&nbsp;&nbsp; <a href="http://www.foreclosures.com/pages/privacy_policy.asp" style="cursor: help">Privacy Policy</a></font>
 </center>
 
 </td>
@@ -329,7 +330,6 @@ Foreclosures.com offers premium services, such as our foreclosure listing servic
 &nbsp;
 </td></tr>
 </tbody></table>
-
 
 
 
